Refactor CefBrowserWr and CefDropTargetListener for improved instance handling; update documentation generation scripts for better classpath management